@@ -1,14 +1,25 @@
+import java.util.Properties
+
 plugins {
     id("com.android.application")
     id("org.jetbrains.kotlin.android")
     id("androidx.navigation.safeargs.kotlin")
     kotlin("kapt")
     id("com.google.dagger.hilt.android")
+    id("kotlinx-serialization")
 }
 
 android {
     namespace = "boostcamp.and07.mindsync"
     compileSdk = 34
+
+    val properties = Properties()
+    properties.load(project.rootProject.file("local.properties").inputStream())
+    val url = properties["BASE_URL"] ?: ""
+    val googleServerClientId = properties["GOOGLE_SERVER_CLIENT_ID"] ?: ""
+    val kakaoClientId = properties["KAKAO_CLIENT_ID"] ?: ""
+    val removeQuotationKakaoClientId =
+        properties["KAKAO_CLIENT_ID"]?.let { id -> (id as String).replace("\"", "") } ?: ""
 
     defaultConfig {
         applicationId = "boostcamp.and07.mindsync"
@@ -18,19 +29,24 @@ android {
         versionName = "1.0"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "BASE_URL", "$url")
+        buildConfigField("String", "GOOGLE_SERVER_CLIENT_ID", "$googleServerClientId")
+        buildConfigField("String", "KAKAO_CLIENT_ID", "$kakaoClientId")
+        manifestPlaceholders["KAKAO_CLIENT_ID"] = removeQuotationKakaoClientId
     }
     buildTypes {
         release {
             isMinifyEnabled = false
             proguardFiles(
                 getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
+                "proguard-rules.pro",
             )
         }
     }
     buildFeatures {
         viewBinding = true
         dataBinding = true
+        buildConfig = true
     }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
@@ -41,24 +57,70 @@ android {
     }
 }
 
+val ktlint by configurations.creating
+
 dependencies {
+    ktlint("com.pinterest.ktlint:ktlint-cli:1.0.1") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
     // androidx
     implementation("androidx.core:core-ktx:1.9.0")
     implementation("androidx.appcompat:appcompat:1.6.1")
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
     // test
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
     testImplementation("junit:junit:4.13.2")
     // material
     implementation("com.google.android.material:material:1.10.0")
-    // hilt,
-    implementation("com.google.dagger:hilt-android:2.44")
-    kapt("com.google.dagger:hilt-android-compiler:2.44")
-    // retrofit
+    // hilt
+    implementation("com.google.dagger:hilt-android:2.48")
+    kapt("com.google.dagger:hilt-android-compiler:2.48")
+    // retrofit, socket.io
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("io.socket:socket.io-client:2.1.0")
     // navigation
     val nav_version = "2.7.5"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    // coil
+    implementation("io.coil-kt:coil:2.5.0")
+    // kotlin serialization, retrofit json converter
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
+    implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0")
+    // google login
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
+    // kakao login
+    implementation("com.kakao.sdk:v2-user:2.18.0") // 카카오 로그인
+    // LayoutManager flexBox
+    implementation("com.google.android.flexbox:flexbox:3.0.0")
+}
+
+val ktlintCheck by tasks.registering(JavaExec::class) {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args(
+        "**/src/main/**/*.kt",
+    )
+}
+
+tasks.check {
+    dependsOn(ktlintCheck)
+}
+
+tasks.register<JavaExec>("ktlintFormat") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    args(
+        "-F",
+        "**/src/main/**/*.kt",
+    )
 }
